[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_toolbox"
version = "0.1.0"
description = "A comprehensive collection of algorithms and data structures implementations in Python"
authors = [
    {name = "Adel Mhiri", email = "adel.mhiri@laposte.net"}
]
dependencies = [
    "typing-extensions>=4.0.0",
    "numpy>=1.21.0",  # For numerical algorithms
    "networkx>=2.6.0",  # For graph algorithms
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pylint>=2.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "sphinx>=4.0.0",  # For documentation
    "sphinx-rtd-theme>=1.0.0",  # For documentation theme
]

[project.urls]
Repository = "https://github.com/yourusername/python-toolbox"
Documentation = "https://python-toolbox.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "docs/*"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 88 